@@ -260,6 +260,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11358. Tests for encryption/decryption with IV calculation
     overflow. (yliu)
 
+    HADOOP-11125. Remove redundant tests in TestOsSecureRandom.
+    (Masanori Oyama via wheat9)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
